@@ -9,6 +9,7 @@
 	- revert indices to db_hash for compatibility.
 	- python: missing ts reference while iterating(#241751).
 	- python: pathetic band-aid pythonic return fixing (#239586).
+	- python: permit hdr.name as well as hdr['name'].
 	
 4.4.8 -> 4.4.9:
 	- start rpm-4.4.9 devel.
